src/main/scoringCode/problem/p_1/sNo_25/error.out
../problem/p_1/sNo_25/25.c:1:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
 gdgd
 ^~~~
